2002-09-06  Harald Harders  <h.harders@tu-bs.de>

	* demo/Makefile.am demo/Makefile.am.in docs/psdoc/ps_fontfile_doc.tex
	demo/fontfile.dem demo/fontfile_latex.dem:
	Redo fontfile demos to use commonly available fonts.
	* term/post.trm src/misc.c src/misc.h: 
	Add reset command 'set term post nofontfiles'

2002-09-05  Johannes Zellner  <johannes@zellner.org>

	* src/gplt_x11.c term/x11.trm: support for rotated text

2002-09-03  Ethan Merritt  <merritt@u.washington.edu>

	* term/post.trm: (Harald Harders) Report FontName of embedded fonts.
	* term/gd.trm: Do vertical justification based on full character cell.

2002-09-02  Harald Harders  <h.harders@tu-bs.de>

	* NEWS demo/fontfile.dem docs/gnuplot.doc docs/psdoc/Makefile
	docs/psdoc/README docs/psdoc/ps_fontfile_doc.tex src/misc.c src/misc.h
	src/plot.c src/save.c src/set.c src/show.c src/tables.c src/tables.h
	src/term.c src/util.c src/util.h src/variable.c src/variable.h
	term/post.trm: Implementation of PFA, PFB and TTF font support in
	postscript: encapsulate the font definitions directly into the gnuplot
	output postscript file. New command 'set fontfile'. New option 'set
	term postscript ... fontfile'.

2002-09-02  Ethan Merritt  <merritt@u.washington.edu>

        * src/axis.h src/graph3d.c src/graphics.c src/set.c:
	Modularize the routines for label and tic-label handling.

2002-08-30  Ethan Merritt  <merritt@u.washington.edu>

        * src/term.c term/amiga.trm term/cgm.trm term/epslatex.trm 
        term/metapost.trm term/next.trm term/openstep.trm term/post.trm
        term/x11.trm:  Remove global default font from term.c and make all
        drivers keep their own default font so they don't cross-contaminate.

        * src/graphics.c src/save.c src/set.c src/show.c docs/gnuplot.doc
        demo/fillbox.dem demo/candlesticks.dem demo/candlesticks.dat:
        Add new filledbox style options 'bsolid' and 'bpattern'.
	Draw filledbox style in key rather than a line.
